--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="icon" type="image/png" sizes="120x120" href="./favicon/icon-120.png"> 
+     <link rel="icon" type="image/png" sizes="96x96" href="./favicon/icon-96.png"> 
+    <title>Kashkoush | Portfollio</title>
+     <link rel="icon" type="image/png" sizes="50x50" href="./favicon/icon-50.png"> 
     <title>Kashkoush | Portfollio</title>
   </head>
   <body>
     <div id="root"></div>
-    
+
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://kit.fontawesome.com/4adf739774.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/4adf739774.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
